# chip8

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: gui.rs  main.rs  world.rs
src/cpu/: execution.rs  graphics.rs  mod.rs  ui.rs
